# autoaim_alpha

./: .gitignore  ReadMe.md  autoaim.code-workspace  autoaim.service  dataset.hdf5  prepare_autoaim.service  prepare_autoaim.sh  test.py  test4.py  test44.py  test6.py  test8.py  test_autoaim.service  test_sudo.service
autoaim_alpha/: setup.py
autoaim_alpha/autoaim_alpha/: node_com.py  node_decision_maker.py  node_detector.py  node_key_mouse_control.py  node_marker.py  node_monitor.py  node_mouse_control.py  node_observer.py  node_parameter.py  node_test.py  node_test2.py  node_visualizer  node_visualizer.py  node_webcam_mv.py
autoaim_alpha/autoaim_alpha/camera/: mv_class.py  mv_const.py
autoaim_alpha/autoaim_alpha/decision_maker/: ballistic_predictor.py  decision_maker.py  observer.py  observer_spare.txt  tempCodeRunnerFile.py  tools.py
autoaim_alpha/autoaim_alpha/img/: depth_estimator.py  detector.py  filter.py  img_operation.py  tools.py
autoaim_alpha/autoaim_alpha/os_op/: basic.py  keyboad_and_mouse_control.py
autoaim_alpha/autoaim_alpha/port_slavedevice/: angle.txt  com_tools.py  port.py
autoaim_alpha/autoaim_alpha/utils_network/: actions.py  api_for_yolov5.py  data.py
autoaim_alpha/config/: general_params.yaml
autoaim_alpha/config/camera_config/: blue_isp_params.yaml  red_isp_params.yaml  yolov5_isp_params.yaml
autoaim_alpha/config/net_config/: classifier_class.yaml  net_params.yaml  opt4_class.yaml
autoaim_alpha/config/other_config/: ballistic_params.yaml  decision_maker_params.yaml  observer_params.yaml  pid_params.yaml  pitch_pid_params.yaml  pnp_params.yaml  pnp_spare.yaml  port2_params.yaml  port_params.yaml  yaw_pid_params.yaml
autoaim_alpha/config/tradition_config/blue/: filter1_params.yaml  filter2_params.yaml  preprocess_params.yaml
autoaim_alpha/config/tradition_config/red/: filter1_params.yaml  filter2_params.yaml
autoaim_alpha/launch/: plot_pitch.launch.py  plot_time.launch.py  plot_x_3.launch.py  plot_y_3.launch.py  plot_yaw.launch.py  plot_z_3.launch.py  show_rviz.launch.py  start_autoaim.launch.py  start_autoaim2.launch.py  start_com.launch.py  start_pid_config.launch.py  start_test.launch.py  start_vi.launch.py  start_visualizer.launch.py  start_webcam.launch.py
autoaim_beta/: CMakeLists.txt  FindTensorRT.cmake  package.xml
autoaim_beta/inc/: basic.hpp  detector.hpp  gg_class.hpp  mv_class.hpp  trt_module.hpp
autoaim_beta/src/: all_test.cpp  basic.cpp  config.yaml  config_all.cpp  detector.cpp  gg_class.cpp  mv_class.cpp  node_webcam.cpp  node_webcam_mv.cpp  t.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  tradition_test.cpp  tradition_test_all.cpp  trt_module.cpp  trt_test.cpp  yolo5_test.cpp  yolov5_test.cpp
autoaim_beta/src/test/: CMakeLists.txt  astra_test.cpp  gg_test.cpp  t.cpp  test4.cpp  tradition_test.cpp  webcam_test.cpp  yolov5_test.cpp
autoaim_beta/src/test/buil/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
autoaim_interface/: CMakeLists.txt  ReadMe.md
autoaim_interface/msg/: ArmorPos.msg  ArmorPosList.msg  BroInfo.msg  DebugFire.msg  DetectResult.msg  EleBigGimbalState.msg  ElectricsysCom.msg  ElectricsysState.msg  GimbalAction.msg  PidConfig.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autoaim_alpha/lib/autoaim_alpha/: node_com  node_decision_maker  node_detector  node_marker  node_observer  node_test  node_test2  node_test3  node_visualizer  node_webcam_mv
install/autoaim_alpha/share/autoaim_alpha/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoaim_alpha/share/autoaim_alpha/launch/: plot_pitch.launch.py  plot_time.launch.py  plot_y_3.launch.py  plot_yaw.launch.py  show_rviz.launch.py  start_autoaim.launch.py  start_test.launch.py
install/autoaim_interface/include/autoaim_interface/msg/: armor_pos__functions.c  armor_pos__rosidl_typesupport_fastrtps_c.h  armor_pos__rosidl_typesupport_introspection_c.h  armor_pos__struct.hpp  armor_pos__traits.hpp  armor_pos__type_support.h  car_pos__functions.c  car_pos__functions.h  car_pos__rosidl_typesupport_introspection_c.h  car_pos__rosidl_typesupport_introspection_cpp.hpp  car_pos__struct.hpp  car_pos__traits.hpp  car_pos__type_support.cpp  detect_result.h  detect_result.hpp  detect_result__functions.c  detect_result__rosidl_typesupport_fastrtps_c.h  detect_result__rosidl_typesupport_fastrtps_cpp.hpp  detect_result__rosidl_typesupport_introspection_c.h  detect_result__type_support.c  each_detect_result__functions.h  each_detect_result__rosidl_typesupport_fastrtps_c.h  each_detect_result__rosidl_typesupport_introspection_cpp.hpp  each_detect_result__type_support.c  each_detect_result__type_support.cpp  electricsys_com.hpp  electricsys_com__functions.c  electricsys_com__functions.h  electricsys_com__rosidl_typesupport_fastrtps_c.h  electricsys_com__traits.hpp  electricsys_com__type_support.cpp  electricsys_com__type_support.h  electricsys_state.hpp  electricsys_state__functions.c  electricsys_state__rosidl_typesupport_fastrtps_c.h  electricsys_state__rosidl_typesupport_introspection_cpp.hpp  electricsys_state__type_support.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  (+1 more)
install/autoaim_interface/share/autoaim_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
notes/: questions.txt  requirements.txt
olessons/roi_binary/: get_datasets.py  params.py  predict_and_validation.py  trans_to_onnx.py
olessons/roi_transform/: params.py  predict_and_validation.py  trans_to_onnx.py
pyscripts_config/: config_all.py  config_all_single.py  config_can_rec.py  config_can_send.py  config_com.py  config_net_single.py  config_trt2.py  config_trt2_classifer.py  config_trt2_yolov5.py
pyscripts_tools/: tools_cal_trajectory.py  tools_calibrate.py  tools_check_gpu_mem.py  tools_doing_nothing.py  tools_get_onnx.py
(+9 files in other folders)
